--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
     <title>GameInsider</title>
+    <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -37,7 +38,9 @@
               </li>
             </ul>
             <div class="dropdown">
-              <img src="./logos/user.png" alt="Profile Picture" class="profile-picture ml-auto dropdown-toggle" id="profile-pic" data-toggle="dropdown">
+              <div class="dropdown-toggle" data-toggle="dropdown">
+                <img src="./logos/user.png" alt="Profile Picture" class="profile-picture ml-auto" id="profile-pic">
+              </div>
               <div class="dropdown-menu bg-dark" id="profile-menu">
                 <a href="#" class="dropdown-item dropdown-item-text text-info">Edit Profile</a>
                 <a href="#" class="dropdown-item dropdown-item-text text-info">Log Out</a>
@@ -46,5 +49,8 @@
           </div>
         </div>
       </nav>
+      <div class="logo-container"> <!-- usé esta pagina para el logo https://app.logo.com/flow/type/-->
+        <img src="./logos/gameinsider-high-resolution-logo-black-on-transparent-background.png" alt="Logo" class="logo"> 
+      </div>
 </body>
 </html>
