--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./fontawesome/fontawesome.min.css">
     <link href="style.css" rel="stylesheet">
     <title>GameInsider</title>
     <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
@@ -51,6 +52,14 @@
       </nav>
       <div class="logo-container"> <!-- usé esta pagina para el logo https://app.logo.com/flow/type/-->
         <img src="./logos/gameinsider-high-resolution-logo-black-on-transparent-background.png" alt="Logo" class="logo"> 
+      </div>
+      <div class="search-container">
+        <form>
+          <input type="text" placeholder="Search...">
+          <a href="#">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </a>
+        </form>
       </div>
 </body>
 </html>
