--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./fontawesome/fontawesome.min.css">
+    <script src="https://kit.fontawesome.com/918dea5264.js" crossorigin="anonymous"></script>
     <link href="style.css" rel="stylesheet">
     <title>GameInsider</title>
     <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
@@ -56,9 +56,7 @@
       <div class="search-container">
         <form>
           <input type="text" placeholder="Search...">
-          <a href="#">
-            <i class="fa-solid fa-magnifying-glass"></i>
-          </a>
+          <button type="submit"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
         </form>
       </div>
 </body>
