--- a/main.html
+++ b/main.html
@@ -1,63 +1,217 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-    <script src="https://kit.fontawesome.com/918dea5264.js" crossorigin="anonymous"></script>
-    <link href="style.css" rel="stylesheet">
-    <title>GameInsider</title>
-    <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/918dea5264.js" crossorigin="anonymous"></script>
+  <link href="./styles/main.css" rel="stylesheet">
+  <title>GameInsider</title>
+  <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
+  <script src="./js/carousel.js"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand navbar-nav align-middle" href="#">
-                <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33" class="d-inline-block align-text-top">
-                GameInsider
-            </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">News</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Lastest Games</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Favorites</a>
-              </li>
-            </ul>
-            <div class="dropdown">
-              <div class="dropdown-toggle" data-toggle="dropdown">
-                <img src="./logos/user.png" alt="Profile Picture" class="profile-picture ml-auto" id="profile-pic">
-              </div>
-              <div class="dropdown-menu bg-dark" id="profile-menu">
-                <a href="#" class="dropdown-item dropdown-item-text text-info">Edit Profile</a>
-                <a href="#" class="dropdown-item dropdown-item-text text-info">Log Out</a>
-              </div>
-            </div>
+  <!--------------------------------NAVBAR------------------------------------------------------------>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand navbar-nav align-middle" href="#">
+        <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33"
+          class="d-inline-block align-text-top">
+        GameInsider
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">News</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Lastest Games</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled">Favorites</a>
+          </li>
+        </ul>
+        <div class="dropdown">
+          <div class="dropdown-toggle" data-toggle="dropdown">
+            <img src="./logos/user.png" alt="Profile Picture" class="profile-picture ml-auto" id="profile-pic">
+          </div>
+          <div class="dropdown-menu bg-dark" id="profile-menu">
+            <a href="#" class="dropdown-item dropdown-item-text text-info">Edit Profile</a>
+            <a href="#" class="dropdown-item dropdown-item-text text-info">Log Out</a>
           </div>
         </div>
-      </nav>
-      <div class="logo-container"> <!-- usé esta pagina para el logo https://app.logo.com/flow/type/-->
-        <img src="./logos/gameinsider-high-resolution-logo-black-on-transparent-background.png" alt="Logo" class="logo"> 
       </div>
-      <div class="search-container">
-        <form>
-          <input type="text" placeholder="Search...">
-          <button type="submit"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
-        </form>
-      </div>
+    </div>
+  </nav>
+
+  <!------------------------------------------------LOGO HOME-------------------------------------------------->
+  <div class="logo-container"> <!-- usé esta pagina para el logo https://app.logo.com/flow/type/-->
+    <img src="./logos/gameinsider-high-resolution-logo-black-on-transparent-background.png" alt="Logo" class="logo">
+  </div>
+
+  <!---------------------------------------------------FROM PARA SEARCH------------------------------------------------>
+  <div class="search-container">
+    <form>
+      <input type="text" placeholder="Search...">
+      <button type="submit"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
+    </form>
+  </div>
+  <!-----------------------------------------------CARRUSEL DE IMAGENES / NOTICIAS----------------------------------------->
+
+  <div class="container">
+    <div class="row">
+      <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
+              <div class="MultiCarousel-inner">
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+                  <div class="item">
+                      <div class="pad15">
+                          <p class="lead">Multi Item Carousel</p>
+                          <p>₹ 1</p>
+                          <p>₹ 6000</p>
+                          <p>50% off</p>
+                      </div>
+                  </div>
+              </div>
+              <button class="btn btn-primary leftLst"><</button>
+              <button class="btn btn-primary rightLst">></button>
+          </div>
+    </div>
+  </div>
 </body>
+
 </html>
