--- a/main.html
+++ b/main.html
@@ -16,7 +16,6 @@
   <link href="./styles/main.css" rel="stylesheet">
   <title>GameInsider</title>
   <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
-  <script src="./js/carousel.js"></script>
 </head>
 
 <body>
@@ -74,143 +73,101 @@
   </div>
   <!-----------------------------------------------CARRUSEL DE IMAGENES / NOTICIAS----------------------------------------->
 
-  <div class="container">
-    <div class="row">
-      <div class="MultiCarousel" data-items="1,3,5,6" data-slide="1" id="MultiCarousel"  data-interval="1000">
-              <div class="MultiCarousel-inner">
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-                  <div class="item">
-                      <div class="pad15">
-                          <p class="lead">Multi Item Carousel</p>
-                          <p>₹ 1</p>
-                          <p>₹ 6000</p>
-                          <p>50% off</p>
-                      </div>
-                  </div>
-              </div>
-              <button class="btn btn-primary leftLst"><</button>
-              <button class="btn btn-primary rightLst">></button>
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="cards-wrapper">
+        <div class="card">
+          <img src="./news/hollow.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">GAME</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="./news/silksong.jpeg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+        <div class="card d-none d-md-block">
+          <img src="./news/hogwarts.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="carousel-item">
+        <div class="cards-wrapper">
+          <div class="card">
+            <img src="./news/sifu.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card d-none d-md-block">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card d-none d-md-block">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="cards-wrapper">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card d-none d-md-block">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+          <div class="card d-none d-md-block">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 </body>
 
