home.html template

--- a/main.html
+++ b/main.html
@@ -22,9 +22,8 @@
   <!--------------------------------NAVBAR------------------------------------------------------------>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand navbar-nav align-middle" href="#">
-        <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33"
-          class="d-inline-block align-text-top">
+      <a class="navbar-brand d-flex align-items-center" href="#">
+        <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33" class="d-inline-block align-text-top mr-2">
         GameInsider
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -80,7 +79,7 @@
         <div class="card">
           <img src="./news/hollow.jpg" class="card-img-top" alt="...">
           <div class="card-body">
-            <h5 class="card-title">GAME</h5>
+            <h5 class="card-title">Card title</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
@@ -114,7 +113,7 @@
             </div>
           </div>
           <div class="card d-none d-md-block">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./news/elden.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -122,7 +121,7 @@
             </div>
           </div>
           <div class="card d-none d-md-block">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./news/dark.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +133,7 @@
       <div class="carousel-item">
         <div class="cards-wrapper">
           <div class="card">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./news/stardew.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -142,7 +141,7 @@
             </div>
           </div>
           <div class="card d-none d-md-block">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./news/cities.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -150,7 +149,7 @@
             </div>
           </div>
           <div class="card d-none d-md-block">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./news/project.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
