home.html template

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/918dea5264.js" crossorigin="anonymous"></script>
-  <link href="./styles/main.css" rel="stylesheet">
+  <link href="./styles/home.css" rel="stylesheet">
   <title>GameInsider</title>
   <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
 </head>
