navy blue navbar

--- a/home.html
+++ b/home.html
@@ -20,7 +20,7 @@
 
 <body>
   <!--------------------------------NAVBAR------------------------------------------------------------>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark custom-nav-bg">
     <div class="container-fluid">
       <a class="navbar-brand d-flex align-items-center" href="#">
         <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33" class="d-inline-block align-text-top mr-2">
