--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
   <!--------------------------------NAVBAR------------------------------------------------------------>
   <nav class="navbar navbar-expand-lg navbar-dark custom-nav-bg">
     <div class="container-fluid">
-      <a class="navbar-brand d-flex align-items-center" href="#">
+      <a class="navbar-brand d-flex align-items-center" href="./home.html">
         <img src="./logos/gameinsider-website-favicon-black.png" alt="Logo" width="30" height="33" class="d-inline-block align-text-top mr-2">
         GameInsider
       </a>
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="./home.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">News</a>
@@ -65,9 +65,9 @@
 
   <!---------------------------------------------------FROM PARA SEARCH------------------------------------------------>
   <div class="search-container">
-    <form>
+    <form method="get" action="./search.html">
       <input type="text" placeholder="Search...">
-      <button type="submit"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
+      <button type="submit" id="search-button"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
     </form>
   </div>
   <!-----------------------------------------------CARRUSEL DE IMAGENES / NOTICIAS----------------------------------------->
