Search.html preview

--- a/search.html
+++ b/search.html
@@ -16,7 +16,7 @@
   <link href="./styles/home.css" rel="stylesheet">
   <link href="./styles/search.css" rel="stylesheet">
   <title>GameInsider</title>
-  <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png">
+  <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png"> 
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark custom-nav-bg">
@@ -63,5 +63,90 @@
         </div>
       </nav>
 
+      <!-------------------------------------------PUBLICATIONS----------------------------------------------------------->
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
+      <div class="publication">
+        <h3 class="title">Publication Title</h3>
+        <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+        </p>
+        <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+        <div class="metadata">
+            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+            <span>123</span>
+            <i class="fa-solid fa-comment comments"></i>
+            <span>456</span>
+        </div>
+      </div>
 </body>
 </html>
