js get urlquery

--- a/search.html
+++ b/search.html
@@ -46,7 +46,7 @@
             </ul>
             <div class="search-container-nav">
                 <form method="get" action="./search.html">
-                    <input type="text" placeholder="Search...">
+                    <input type="text" placeholder="Search..." id="search" name="search" value="">
                     <button type="submit"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
                 </form>
             </div>
@@ -149,4 +149,5 @@
         </div>
       </div>
 </body>
+<script src="./js/search.js"></script>
 </html>
