--- a/home.html
+++ b/home.html
@@ -63,10 +63,10 @@
     <img src="./logos/gameinsider-high-resolution-logo-black-on-transparent-background.png" alt="Logo" class="logo">
   </div>
 
-  <!---------------------------------------------------FROM PARA SEARCH------------------------------------------------>
+  <!---------------------------------------------------FORM PARA SEARCH------------------------------------------------>
   <div class="search-container">
     <form method="get" action="./search.html">
-      <input type="text" placeholder="Search...">
+      <input type="text" placeholder="Search..." id="search" value="" name="search">
       <button type="submit" id="search-button"><i class="fa-solid fa-magnifying-glass" id="search-icon"></i></button>
     </form>
   </div>
