profile.html creation

--- a/search.html
+++ b/search.html
@@ -55,7 +55,7 @@
                 <img src="./logos/user.png" alt="Profile Picture" class="profile-picture ml-auto" id="profile-pic">
               </div>
               <div class="dropdown-menu bg-dark" id="profile-menu">
-                <a href="#" class="dropdown-item dropdown-item-text text-info">Edit Profile</a>
+                <a href="./profile.html" class="dropdown-item dropdown-item-text text-info">Edit Profile</a>
                 <a href="#" class="dropdown-item dropdown-item-text text-info">Log Out</a>
               </div>
             </div>
