--- a/profile.html
+++ b/profile.html
@@ -19,6 +19,7 @@
   <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png"> 
 </head>
 <body>
+    <!-------------------------------------------------NAVBAR--------------------------------------------------------------------->
     <nav class="navbar navbar-expand-lg navbar-dark custom-nav-bg">
         <div class="container-fluid">
           <a class="navbar-brand d-flex align-items-center" href="./home.html">
@@ -62,3 +63,72 @@
           </div>
         </div>
       </nav>
+      <!------------------------------------------------PROFILE PAGE------------------------------------------------------------------->
+      <section>
+        <div class="container py-5">
+          <div class="row">
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="card mb-4">
+                  <div class="card-body text-center">
+                    <img src="./logos/user.png" alt="avatar" class="rounded-circle img-fluid">
+                    <h5 class="my-3">Julian Gaitan</h5>
+                    <p class="text-muted mb-1">JulianG</p>
+                    <p class="text-muted mb-1">Member since 30-01-2023</p>
+                  </div>
+                </div>
+                <div class="card mb-4 mb-lg-0">
+                  <div class="card-body p-0">
+                    <ul class="list-group list-group-flush rounded-3">
+                      <li class="list-group-item d-flex justify-content-between align-items-center p-3">
+                        <i class="fas fa-poo" style="color: #4d0c0c;" data-badge-name="Poo publication"></i>
+                        <i class="far fa-smile-beam" style="color: #333333;" data-badge-name="Awesome Post"></i>
+                        <i class="fas fa-fire" style="color: #e63a0a;" data-badge-name="On Fire Post"></i>
+                        <i class="fas fa-gamepad" style="color: #ac2bac;" data-badge-name="Gamer"></i>
+                        <i class="fas fa-desktop" style="color: #3b5998;" data-badge-name="Classic player"></i>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-8">
+                <div class="row">
+                  <div class="col-md-12 d-flex justify-content-between align-items-center p-3 mb-3">
+                    <h5>Publications</h5>
+                    <div class="sort-buttons">
+                      <button class="btn btn-secondary">Newer</button>
+                      <button class="btn btn-secondary">Featured</button>
+                      <button class="btn btn-secondary">Most Viewed</button>
+                    </div>
+                  </div>
+                <div class="col-md-6">
+                  <div class="card mb-4 mb-md-0 mt-3">
+                    <div class="card-body">
+                      <p class="mb-4"><span class="text-primary font-italic me-1">Minecraft</span> End Palace.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-4 mb-md-0 mt-3">
+                      <div class="card-body">
+                        <p class="mb-4"><span class="text-primary font-italic me-1">Project Zomboid</span> Blind run guide.
+                        </p>
+                      </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card mb-4 mb-md-0 mt-3">
+                      <div class="card-body">
+                        <p class="mb-4"><span class="text-primary font-italic me-1">Stardew Valley</span> Ten years farm.
+                        </p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+</body>
+</html>
