--- a/profile.html
+++ b/profile.html
@@ -15,6 +15,7 @@
   <script src="https://kit.fontawesome.com/918dea5264.js" crossorigin="anonymous"></script>
   <link href="./styles/home.css" rel="stylesheet">
   <link href="./styles/search.css" rel="stylesheet">
+  <link href="./styles/profile.css" rel="stylesheet">
   <title>GameInsider</title>
   <link rel="icon" type="image/x-icon" href="./logos/gameinsider-website-favicon-black.png"> 
 </head>
@@ -69,7 +70,7 @@
           <div class="row">
             <div class="row">
               <div class="col-lg-4">
-                <div class="card mb-4">
+                <div class="card mb-4 no-animated">
                   <div class="card-body text-center">
                     <img src="./logos/user.png" alt="avatar" class="rounded-circle img-fluid">
                     <h5 class="my-3">Julian Gaitan</h5>
@@ -77,15 +78,18 @@
                     <p class="text-muted mb-1">Member since 30-01-2023</p>
                   </div>
                 </div>
-                <div class="card mb-4 mb-lg-0">
+                <div class="card mb-4 mb-lg-0 no-animated no-shadow">
+                  <div class="card-header text-center">
+                    <h4 class="mb-0">Player Badges</h4>
+                  </div>
                   <div class="card-body p-0">
                     <ul class="list-group list-group-flush rounded-3">
                       <li class="list-group-item d-flex justify-content-between align-items-center p-3">
-                        <i class="fas fa-poo" style="color: #4d0c0c;" data-badge-name="Poo publication"></i>
+                        <i class="fas fa-poo" style="color: #4d0c0c;" data-badge-name="Poo Post"></i>
                         <i class="far fa-smile-beam" style="color: #333333;" data-badge-name="Awesome Post"></i>
-                        <i class="fas fa-fire" style="color: #e63a0a;" data-badge-name="On Fire Post"></i>
+                        <i class="fas fa-fire" style="color: #e63a0a;" data-badge-name="On Fire"></i>
                         <i class="fas fa-gamepad" style="color: #ac2bac;" data-badge-name="Gamer"></i>
-                        <i class="fas fa-desktop" style="color: #3b5998;" data-badge-name="Classic player"></i>
+                        <i class="fas fa-desktop" style="color: #3b5998;" data-badge-name="Classic Player"></i>
                       </li>
                     </ul>
                   </div>
@@ -101,29 +105,70 @@
                       <button class="btn btn-secondary">Most Viewed</button>
                     </div>
                   </div>
-                <div class="col-md-6">
-                  <div class="card mb-4 mb-md-0 mt-3">
-                    <div class="card-body">
-                      <p class="mb-4"><span class="text-primary font-italic me-1">Minecraft</span> End Palace.
-                      </p>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="card mb-4 mb-md-0 mt-3">
+                        <div class="card-body">
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Minecraft</span> End Palace.
+                          </p>
+                          <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+                          <div class="metadata">
+                            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+                            <span>123</span>
+                            <i class="fa-solid fa-comment comments"></i>
+                            <span>456</span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="card mb-4 mb-md-0 mt-3">
+                        <div class="card-body">
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Project Zomboid</span> Blind run guide.
+                          </p>
+                          <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+                          <div class="metadata">
+                            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+                            <span>123</span>
+                            <i class="fa-solid fa-comment comments"></i>
+                            <span>456</span>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4 mb-md-0 mt-3">
-                      <div class="card-body">
-                        <p class="mb-4"><span class="text-primary font-italic me-1">Project Zomboid</span> Blind run guide.
-                        </p>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="card mb-4 mb-md-0 mt-3">
+                        <div class="card-body">
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Stardew Valley</span> Ten years farm.
+                          </p>
+                          <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+                          <div class="metadata">
+                            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+                            <span>123</span>
+                            <i class="fa-solid fa-comment comments"></i>
+                            <span>456</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="card mb-4 mb-md-0 mt-3">
-                      <div class="card-body">
-                        <p class="mb-4"><span class="text-primary font-italic me-1">Stardew Valley</span> Ten years farm.
-                        </p>
+                    <div class="col-md-6">
+                      <div class="card mb-4 mb-md-0 mt-3">
+                        <div class="card-body">
+                          <p class="mb-4"><span class="text-primary font-italic me-1">Stardew Valley</span> Ten years farm.
+                          </p>
+                          <img src="./posts/hollow-post.jpg" alt="Publication Image" class="img-fluid">
+                          <div class="metadata">
+                            <i class="fa-sharp fa-solid fa-heart thumbs-up"></i>
+                            <span>123</span>
+                            <i class="fa-solid fa-comment comments"></i>
+                            <span>456</span>
+                          </div>
+                        </div>
                       </div>
                     </div>
+                  </div>
                 </div>
               </div>
             </div>
